BUG FIX: loading的z-index

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -574,6 +574,7 @@ $zindex-modal-bg:                 1040 !default;
 $zindex-modal:                    1050 !default;
 $zindex-confirm:                  1050 !default;
 $zindex-alert:                    1050 !default;
+$zindex-loading:                  1050 !default;
 $zindex-message:                  1060 !default;
 $zindex-notification:             1060 !default;
 $zindex-notification:             1060 !default;
