--- a/src/styles/modules/_loading.scss
+++ b/src/styles/modules/_loading.scss
@@ -9,6 +9,7 @@
   bottom: 0;
   margin: auto;
   background: $loading-mask-bg;
+  z-index: $zindex-loading;
 }
 
 
